# BAD-Project-Eatvolution

./: .env.example  .gitignore  .prettierrc  README.md  docker-compose.yml  dump.rdb  hash.ts  package-lock.json  package.json
.github/workflows/: cicd.yml
docs/: bad.dio  erd.txt  gameplay.md  new-erd.txt  routesDesign.md
docs/db/: erd.txt  food.txt
docs/frontend/: html_design.dio
node_server/: .env.dummy  .env.example  .eslintrc.js  .gitignore  .prettierignore  README.md  dockerfile  package.json
node_server/models/: controllerModels.ts  dbModels.ts  models.ts  serviceModels.ts
node_server/private/: collection.html  collection.js  gamepage.html  index.html
node_server/private/css/: foodCollection.css  gamepage.css
node_server/private/js/: auth.js  collection.js  foodshop.js  gamepage.js
node_server/public/: createAcc.html  index.html  signup.html
node_server/public/css/: base.css  (+1 more)
node_server/src/: api.routes.ts  container.ts  env.ts  hash.text.ts  main.ts  socket.ts
pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
pgdata/pg_stat/: pgstat.stat
private/: user.html
public/: 404.html  index.html
py_server/: README.md  app.py  dockerfile  pyproject.toml  requirements.txt
py_server/AI_model/: food_model.sav
py_server/src/: app.py
py_server/src/MLP/: food_category_train.py
src/: env.ts  guard.ts  main.ts  socket.ts
src/app/: app.module.ts
src/controllers/: auth.controllers.ts
src/db/: env.ts  knexfile.ts
src/services/: auth.services.ts
src/utils/: allExceptions.filter.ts  logger.ts
test/: app.e2e-spec.ts
(+91 files in other folders)
