[tool.poetry]
name = "py_server"
version = "0.1.0"
description = ""
authors = ["yt20chill <ytelainechiu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
sanic = "^23.6.0"
pandas = "1.5.3"
scikit-learn = "1.2.2"
tensorflow = "^2.14.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "3.7.1"
numpy = "1.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
